k8s/manifests/prometheus/prometheus-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    tier: infra
