k8s/manifests/prometheus/policies_test.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule-test"
  namespace: prometheus
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: grafana
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
    - fromEntities:
        - remote-node
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            io.kubernetes.pod.namespace: falco
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
        - matchLabels:
            io.kubernetes.pod.namespace: default
    - toEntities:
        - host
        - remote-node

---

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "alertmanager-egress-world"
  namespace: prometheus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  egress:
    - toEntities:
        - world
